force-app/main/default/objects/Onboarding_Form__c/Onboarding_Form__c.object-meta.xml
<CustomObject>
    <label>Onboarding Form</label>
    <nameField>
        <label>Onboarding Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>