force-app/main/default/objects/Onboarding_Form__c/fields/Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2__c</fullName>
    <formula>Primary_Contact__r.Mailing_Street_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Line 2</label>
    <type>Text</type>
</CustomField>