force-app/main/default/objects/Onboarding_Form__c/fields/Address_Line__c.field-meta.xml
<CustomField>
    <fullName>Address_Line__c</fullName>
    <formula>Primary_Contact__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Line 1</label>
    <type>Text</type>
</CustomField>