force-app/main/default/objects/Onboarding_Form__c/fields/Case_Info__c.field-meta.xml
<CustomField>
    <fullName>Case_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Info</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>EDMS_Onboarding_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>