force-app/main/default/objects/Onboarding_Form__c/fields/Charter_Fee__c.field-meta.xml
<CustomField>
    <fullName>Charter_Fee__c</fullName>
    <label>Charter Fee:</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>