force-app/main/default/objects/Onboarding_Form__c/fields/College_Cost_Planner__c.field-meta.xml
<CustomField>
    <fullName>College_Cost_Planner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>College Cost Planner</label>
    <type>Checkbox</type>
</CustomField>