force-app/main/default/objects/Onboarding_Form__c/fields/Consolidation__c.field-meta.xml
<CustomField>
    <fullName>Consolidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consolidation</label>
    <type>Checkbox</type>
</CustomField>