force-app/main/default/objects/Onboarding_Form__c/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <formula>School_Name__r.Contract_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>