force-app/main/default/objects/Onboarding_Form__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <formula>School_Name__r.Customer_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer ID</label>
    <type>Text</type>
</CustomField>