force-app/main/default/objects/Onboarding_Form__c/fields/DL_Consolidation__c.field-meta.xml
<CustomField>
    <fullName>DL_Consolidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DL Consolidation</label>
    <type>Checkbox</type>
</CustomField>