force-app/main/default/objects/Onboarding_Form__c/fields/DL_Grad_PLUS__c.field-meta.xml
<CustomField>
    <fullName>DL_Grad_PLUS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DL Grad PLUS</label>
    <type>Checkbox</type>
</CustomField>