force-app/main/default/objects/Onboarding_Form__c/fields/DL_Parent_PLUS__c.field-meta.xml
<CustomField>
    <fullName>DL_Parent_PLUS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DL Parent PLUS</label>
    <type>Checkbox</type>
</CustomField>