force-app/main/default/objects/Onboarding_Form__c/fields/DL_Unsubsidized_Stafford__c.field-meta.xml
<CustomField>
    <fullName>DL_Unsubsidized_Stafford__c</fullName>
    <defaultValue>true</defaultValue>
    <label>DL Unsubsidized Stafford</label>
    <type>Checkbox</type>
</CustomField>