force-app/main/default/objects/Onboarding_Form__c/fields/ED_School_Program_Length__c.field-meta.xml
<CustomField>
    <fullName>ED_School_Program_Length__c</fullName>
    <label>ED School Program Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Associate&#39;s Degree</fullName>
            </value>
            <value>
                <fullName>Bachelor&#39;s Degree</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Graduate/Professional</fullName>
            </value>
            <value>
                <fullName>Master&#39;s or Doctor&#39;s Degree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>