force-app/main/default/objects/Onboarding_Form__c/fields/ED_School_Type__c.field-meta.xml
<CustomField>
    <fullName>ED_School_Type__c</fullName>
    <label>ED School Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Proprietary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>