force-app/main/default/objects/Onboarding_Form__c/fields/FY_2010__c.field-meta.xml
<CustomField>
    <fullName>FY_2010__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FY 2010</label>
    <type>Checkbox</type>
</CustomField>