force-app/main/default/objects/Onboarding_Form__c/fields/FY_2011__c.field-meta.xml
<CustomField>
    <fullName>FY_2011__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FY 2011</label>
    <type>Checkbox</type>
</CustomField>