force-app/main/default/objects/Onboarding_Form__c/fields/FY_2012__c.field-meta.xml
<CustomField>
    <fullName>FY_2012__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FY 2012</label>
    <type>Checkbox</type>
</CustomField>