force-app/main/default/objects/Onboarding_Form__c/fields/Grad_PLUS__c.field-meta.xml
<CustomField>
    <fullName>Grad_PLUS__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Grad PLUS</label>
    <type>Checkbox</type>
</CustomField>