force-app/main/default/objects/Onboarding_Form__c/fields/HEAL__c.field-meta.xml
<CustomField>
    <fullName>HEAL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HEAL</label>
    <type>Checkbox</type>
</CustomField>