force-app/main/default/objects/Onboarding_Form__c/fields/Institution__c.field-meta.xml
<CustomField>
    <fullName>Institution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Institution</label>
    <type>Checkbox</type>
</CustomField>