force-app/main/default/objects/Onboarding_Form__c/fields/Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State__c</fullName>
    <formula>Primary_Contact__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing State</label>
    <type>Text</type>
</CustomField>