force-app/main/default/objects/Onboarding_Form__c/fields/My_Money_101__c.field-meta.xml
<CustomField>
    <fullName>My_Money_101__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SALT Courses</label>
    <type>Checkbox</type>
</CustomField>