force-app/main/default/objects/Onboarding_Form__c/fields/OE_Code__c.field-meta.xml
<CustomField>
    <fullName>OE_Code__c</fullName>
    <formula>School_Name__r.OE_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OE Code</label>
    <type>Text</type>
</CustomField>