force-app/main/default/objects/Onboarding_Form__c/fields/Perkins__c.field-meta.xml
<CustomField>
    <fullName>Perkins__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Perkins</label>
    <type>Checkbox</type>
</CustomField>