force-app/main/default/objects/Onboarding_Form__c/fields/Phonetic_Name__c.field-meta.xml
<CustomField>
    <fullName>Phonetic_Name__c</fullName>
    <label>Phonetic Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>