force-app/main/default/objects/Onboarding_Form__c/fields/PLUS__c.field-meta.xml
<CustomField>
    <fullName>PLUS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PLUS</label>
    <type>Checkbox</type>
</CustomField>