force-app/main/default/objects/Onboarding_Form__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact:</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>EDMS_Onboarding_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>