force-app/main/default/objects/Onboarding_Form__c/fields/Print_Name_BPMS__c.field-meta.xml
<CustomField>
    <fullName>Print_Name_BPMS__c</fullName>
    <label>Print Name (BPMS)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>