force-app/main/default/objects/Onboarding_Form__c/fields/Private_Consolidation__c.field-meta.xml
<CustomField>
    <fullName>Private_Consolidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private Consolidation</label>
    <type>Checkbox</type>
</CustomField>