force-app/main/default/objects/Onboarding_Form__c/fields/Reporting_ID__c.field-meta.xml
<CustomField>
    <fullName>Reporting_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reporting ID</label>
    <type>Checkbox</type>
</CustomField>