force-app/main/default/objects/Onboarding_Form__c/fields/Scholarship_Search__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scholarship Search</label>
    <type>Checkbox</type>
</CustomField>