force-app/main/default/objects/Onboarding_Form__c/fields/School_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Name__c</fullName>
    <label>Organization Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Onboarding Forms</relationshipLabel>
    <relationshipName>EDMS_Onboarding_Forms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>