force-app/main/default/objects/Onboarding_Form__c/fields/School_Website__c.field-meta.xml
<CustomField>
    <fullName>School_Website__c</fullName>
    <formula>School_Name__r.Website</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Website</label>
    <type>Text</type>
</CustomField>