force-app/main/default/objects/Onboarding_Form__c/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <label>Short Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>