force-app/main/default/objects/Onboarding_Form__c/fields/SLS__c.field-meta.xml
<CustomField>
    <fullName>SLS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLS</label>
    <type>Checkbox</type>
</CustomField>