force-app/main/default/objects/Onboarding_Form__c/fields/Stafford__c.field-meta.xml
<CustomField>
    <fullName>Stafford__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Stafford</label>
    <type>Checkbox</type>
</CustomField>