force-app/main/default/objects/Onboarding_Form__c/fields/Stafford_Subsidized__c.field-meta.xml
<CustomField>
    <fullName>Stafford_Subsidized__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Stafford Subsidized</label>
    <type>Checkbox</type>
</CustomField>