force-app/main/default/objects/Onboarding_Form__c/fields/Stafford_Unsubsidized__c.field-meta.xml
<CustomField>
    <fullName>Stafford_Unsubsidized__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Stafford Unsubsidized</label>
    <type>Checkbox</type>
</CustomField>