force-app/main/default/objects/Onboarding_Form__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <defaultValue>false</defaultValue>
    <label>State</label>
    <type>Checkbox</type>
</CustomField>