force-app/main/default/objects/Onboarding_Form__c/fields/Telephone__c.field-meta.xml
<CustomField>
    <fullName>Telephone__c</fullName>
    <formula>Primary_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telephone</label>
    <type>Text</type>
</CustomField>