force-app/main/default/objects/Onboarding_Form__c/fields/Today_s_Date__c.field-meta.xml
<CustomField>
    <fullName>Today_s_Date__c</fullName>
    <label>Today&#39;s Date:</label>
    <type>Date</type>
</CustomField>