force-app/main/default/objects/Onboarding_Form__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>School - 2 Year Private</fullName>
            </value>
            <value>
                <fullName>School - 2 Year Public</fullName>
            </value>
            <value>
                <fullName>School - 3 Year School</fullName>
            </value>
            <value>
                <fullName>School - 4 Year Private</fullName>
            </value>
            <value>
                <fullName>School - 4 Year Public</fullName>
            </value>
            <value>
                <fullName>School - Foreign School</fullName>
            </value>
            <value>
                <fullName>School - Grad/Profession</fullName>
            </value>
            <value>
                <fullName>School - Liberal Arts</fullName>
            </value>
            <value>
                <fullName>School - Proprietary</fullName>
            </value>
            <value>
                <fullName>School - Voc or Tech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>