force-app/main/default/objects/Onboarding_Form__c/fields/Years_in_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Repayment__c</fullName>
    <inlineHelpText>Eligible years for Proactive EDMS</inlineHelpText>
    <label>Years in Repayment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>